Added assignment folder

--- a/assignments/assignment3.html
+++ b/assignments/assignment3.html
@@ -5,18 +5,18 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Grilled Sausages</title>
-  <link rel="stylesheet" href="../sheets/styles.css" type="text/css">
+  <link rel="stylesheet" href="./sheets/styles.css" type="text/css">
   <!-- https://fonts.adobe.com/my_fonts?project_id=jpg1uwx#web_projects-section -->
   <link rel="font-library" href="https://use.typekit.net/jpg1uwx.css">
 </head>
 
 <body>
   <div class="navigation">
-    <a href="assignment1.html">Hello, World!</a>
-    <a href="../home.html">Home Page</a>
-    <a class="active" href="assignment3.html">Sausages</a>
-    <a href="assignment4.html">HTML Challenges</a>
-    <a href="assignment5.html">Challenges V2</a>
+    <a href="./assignment1.html">Hello, World!</a>
+    <a href="./home.html">Home Page</a>
+    <a class="active" href="./assignment3.html">Sausages</a>
+    <a href="./assignment4.html">HTML Challenges</a>
+    <a href="./assignment5.html">Challenges V2</a>
   </div>
 
   <hr>
@@ -122,9 +122,9 @@
 
   <h3 id="Gallery">Gallery</h3>
   <hr>
-  <img src="/img/long.jpeg" alt="Long sausage" height="400">
-  <img src="/img/several.jpeg" alt="Several sausage" height="400">
-  <img src="/img/grilled.jpg" alt="Grilled sausage" height="400">
+  <img src="./images/long.jpeg" alt="Long sausage" height="400">
+  <img src="./images/several.jpeg" alt="Several sausage" height="400">
+  <img src="./images/grilled.jpg" alt="Grilled sausage" height="400">
   <hr>
 
   <h3 id="See_Also">See Also</h3>
