--- a/assignments/assignment5.html
+++ b/assignments/assignment5.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Assignment 4</title>
-  <link rel="stylesheet" href="../sheets/styles.css" type="text/css">
+  <link rel="stylesheet" href="./sheets/styles.css" type="text/css">
   <!-- https://fonts.adobe.com/my_fonts?project_id=jpg1uwx#web_projects-section -->
   <link rel="font-library" href="https://use.typekit.net/jpg1uwx.css">
   <style type="text/css">
@@ -100,11 +100,11 @@
 
 <body>
   <div class="navigation">
-    <a href="assignment1.html">Hello, World!</a>
-    <a href="../home.html">Home Page</a>
-    <a href="assignment3.html">Sausages</a>
-    <a href="assignment4.html">HTML Challenges</a>
-    <a class="active" href="assignment5.html">Challenges V2</a>
+    <a href="./assignment1.html">Hello, World!</a>
+    <a href="./home.html">Home Page</a>
+    <a href="./assignment3.html">Sausages</a>
+    <a href="./assignment4.html">HTML Challenges</a>
+    <a class="active" href="./assignment5.html">Challenges V2</a>
   </div>
 
   <hr>
