--- a/assignments/home.html
+++ b/assignments/home.html
@@ -13,11 +13,11 @@
 <body>
   <div class="container">
     <div class="navigation">
-      <a href="./assignments/assignment1.html">Hello, World!</a>
+      <a href="./assignment1.html">Hello, World!</a>
       <a class="active" href="home.html">Home Page</a>
-      <a href="./assignments/assignment3.html">Sausages</a>
-      <a href="./assignments/assignment4.html">HTML Challenges</a>
-      <a href="./assignments/assignment5.html">Challenges V2</a>
+      <a href="./assignment3.html">Sausages</a>
+      <a href="./assignment4.html">HTML Challenges</a>
+      <a href="./assignment5.html">Challenges V2</a>
     </div>
 
     <div class="header">
