--- a/assignments/assignment11.html
+++ b/assignments/assignment11.html
@@ -2,17 +2,25 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <title>Assignment 11</title>
+    <title>Assignment 11</title>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="./sheets/assignments.css">
-  <script src="./index.js"></script>
+    <link rel="stylesheet" href="../css/master.css">
+    <link rel="stylesheet" href="./sheets/assignments.css">
+    <script src="./scripts/index.js" defer></script>
 </head>
 
 <body>
-  <button id="button1">Click Here!</button>
+    <h1 id="title">Assignment 11</h1>
+    <h3 id="prompt">Press Any Key To Start!</h3>
+
+    <p id="hidden">Welcome to the hidden assignment!</p>
+    <p id="hidden">Here's a fun button to click... Or not?</p>
+
+    <button id="button1">Click Me?</button>
+    <p id="mouseEvent"></p>
 </body>
 
 </html>
