--- a/assignments/assignment11.html
+++ b/assignments/assignment11.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="../css/master.css">
-    <link rel="stylesheet" href="./sheets/assignments.css">
+    <link rel="stylesheet" href="./sheets/assignment11.css">
     <script src="./scripts/index.js" defer></script>
 </head>
 
