--- a/cv.html
+++ b/cv.html
@@ -2,38 +2,32 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <title>CV</title>
+    <title>CV</title>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="./css/master.css">
-  <!-- https://fonts.adobe.com/my_fonts?project_id=jpg1uwx#web_projects-section -->
-  <link rel="font-library" href="https://use.typekit.net/jpg1uwx.css">
+    <link rel="stylesheet" href="./css/master.css">
+    <!-- https://fonts.adobe.com/my_fonts?project_id=jpg1uwx#web_projects-section -->
+    <link rel="font-library" href="https://use.typekit.net/jpg1uwx.css">
 </head>
 
 <body>
-  <div class="container">
+    <div class="container">
 
-    <div class="navigation">
-      <a href="./index.html">HOME</a>
-      <a href="./work.html">WORK</a>
-      <img class="logo" src="./assets/logo.png" alt="logo">
-      <a href="./about.html">ABOUT</a>
-      <a href="./cv.html">CV</a>
+        <div class="navigation">
+            <a href="./index.html">HOME</a>
+            <a href="./work.html">WORK</a>
+            <img class="logo" src="./assets/logo.png" alt="logo">
+            <a href="./about.html">ABOUT</a>
+            <a href="./cv.html">CV</a>
+        </div>
+
+        <iframe id="cv" src="./assets/cv.pdf" width="100%" height="1056px" frameBorder="0" scrolling="auto">
+        </iframe>
+
+        <footer>© 2022 | Brody Cyphers</footer>
     </div>
-
-    <iframe
-      id="cv"
-      src="./assets/cv.pdf"
-      width="100%"
-      height="1056px"
-      frameBorder="0"
-      scrolling="auto">
-    </iframe>
-
-    <footer>© 2022 | Brody Cyphers</footer>
-  </div>
 
 </body>
 
