--- a/about.html
+++ b/about.html
@@ -13,15 +13,17 @@
     <script src="https://kit.fontawesome.com/b6d149245e.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="content">
     <div class="container">
 
         <div class="navigation">
             <a href="./index.html">HOME</a>
             <a href="./work.html">WORK</a>
-            <img class="logo" src="./assets/logo.png" alt="logo">
+            <a class="logolink" href="./index.html">
+                <img class="logo" src="./assets/logo.png" alt="logo">
+            </a>
             <a href="./about.html">ABOUT</a>
-            <a href="./cv.html">CV</a>
+            <a class="cv" href="./cv.html">CV</a>
         </div>
 
         <h2 class="contact">CONTACT</h2>
