--- a/work.html
+++ b/work.html
@@ -12,82 +12,84 @@
     <link rel="font-library" href="https://use.typekit.net/jpg1uwx.css">
 </head>
 
-<body>
+<body class="content">
     <div class="container">
 
         <div class="navigation">
             <a href="./index.html">HOME</a>
             <a href="./work.html">WORK</a>
-            <img class="logo" src="./assets/logo.png" alt="logo">
+            <a class="logolink" href="./index.html">
+                <img class="logo" src="./assets/logo.png" alt="logo">
+            </a>
             <a href="./about.html">ABOUT</a>
-            <a href="./cv.html">CV</a>
+            <a class="cv" href="./cv.html">CV</a>
         </div>
 
         <div class="gallery">
 
             <div class="item-1">
-                <a target="_blank" href="project-detail.html">
-                    <img class="gallery-item" src="./assets/planet.jpeg" alt="planet">
+                <a target="_blank" href="./projects/opacity.html">
+                    <img class="gallery-item" src="./assets/opacity.png" alt="opacity">
                 </a>
             </div>
 
             <div class="item-2">
-                <a target="_blank" href="project-detail.html">
-                    <img class="gallery-item" src="./assets/goop.jpeg" alt="goop">
+                <a target="_blank" href="./projects/movement.html">
+                    <img class="gallery-item" src="./assets/movement.png" alt="movement">
                 </a>
             </div>
 
             <div class="item-3">
-                <a target="_blank" href="project-detail.html">
-                    <img class="gallery-item" src="./assets/hoop.jpeg" alt="hoop">
+                <a target="_blank" href="./projects/predictability.html">
+                    <img class="gallery-item" src="./assets/predictability.png" alt="predictability">
                 </a>
             </div>
 
             <div class="item-4">
-                <a target="_blank" href="project-detail.html">
-                    <img class="gallery-item" src="./assets/glow.jpeg" alt="glow">
+                <a target="_blank" href="./projects/packagedesign.html">
+                    <img class="gallery-item" src="./assets/packagefront.png" alt="chocolate">
                 </a>
             </div>
 
             <div class="item-5">
-                <a target="_blank" href="project-detail.html">
-                    <img class="gallery-item" src="./assets/pyramid.jpeg" alt="pyramid">
+                <a target="_blank" href="./projects/urwdin.html">
+                    <img class="gallery-item" src="./assets/urwdin.png" alt="typeface">
                 </a>
             </div>
 
             <div class="item-6">
-                <a target="_blank" href="project-detail.html">
-                    <img class="gallery-item" src="./assets/mystic.jpeg" alt="mystic">
+                <a target="_blank" href="./projects/corruption.html">
+                    <img class="gallery-item" src="./assets/corruption.png" alt="corruption">
                 </a>
             </div>
 
             <div class="item-7">
-                <a target="_blank" href="project-detail.html">
-                    <img class="gallery-item" src="./assets/sphere.jpeg" alt="sphere">
+                <a target="_blank" href="./projects/packagedesign.html">
+                    <img class="gallery-item" src="./assets/packageback.png" alt="chocolate">
                 </a>
             </div>
 
             <div class="item-8">
-                <a target="_blank" href="project-detail.html">
-                    <img class="gallery-item" src="./assets/step.jpeg" alt="step">
+                <a target="_blank" href="./projects/distortion.html">
+                    <img class="gallery-item" src="./assets/distortion.png" alt="distortion">
                 </a>
             </div>
 
             <div class="item-9">
-                <a target="_blank" href="project-detail.html">
-                    <img class="gallery-item" src="./assets/balance.jpeg" alt="balance">
+                <a target="_blank" href="./projects/card.html">
+                    <img class="gallery-item" src="./assets/businesscard.png" alt="card">
                 </a>
             </div>
 
             <div class="item-10">
-                <a target="_blank" href="project-detail.html">
-                    <img class="gallery-item" src="./assets/ring.jpeg" alt="ring">
+                <a target="_blank" href="./projects/fpsgame.html">
+                    <img class="gallery-item" src="./assets/fpsgame.png" alt="fpsgame">
                 </a>
             </div>
 
             <div class="item-11">
-                <a target="_blank" href="project-detail.html">
-                    <img class="gallery-item" src="./assets/purple.jpeg" alt="purple">
+                <a target="_blank" href="./projects/astrid.html">
+                    <img class="gallery-item" src="./assets/astrid.jpeg" alt="astrid">
                 </a>
             </div>
 
