--- a/cv.html
+++ b/cv.html
@@ -18,9 +18,11 @@
         <div class="navigation">
             <a href="./index.html">HOME</a>
             <a href="./work.html">WORK</a>
-            <img class="logo" src="./assets/logo.png" alt="logo">
+            <a class="logolink" href="./index.html">
+                <img class="logo" src="./assets/logo.png" alt="logo">
+            </a>
             <a href="./about.html">ABOUT</a>
-            <a href="./cv.html">CV</a>
+            <a class="cv" href="./cv.html">CV</a>
         </div>
 
         <iframe id="cv" src="./assets/cv.pdf" width="100%" height="1056px" frameBorder="0" scrolling="auto">
